--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.14.37",
+    "@types/redis": "^2.8.28",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "redis": "^3.0.2"
   }
 }
