--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "build": "rimraf ./build && tsc -p .",
-    "dev": "nodemon src/index.ts",
-    "start": "npm run build && node build/index.js"
+    "dev": "NODE_ENV=development nodemon src/index.ts",
+    "start": "NODE_ENV=production npm run build && node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "redis": "^3.0.2"
   }
 }
