--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "build": "rimraf ./build && tsc -p .",
-    "dev": "NODE_ENV=development nodemon src/index.ts",
-    "start": "NODE_ENV=production npm run build && node build/index.js"
+    "start:dev": "NODE_ENV=production npm run build && node build/index.js",
+    "start": "NODE_ENV=production node build/index.js"
   },
   "keywords": [],
   "author": "",
