--- a/subscriber/package.json
+++ b/subscriber/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "rimraf ./build && tsc -p .",
-    "start": "NODE_ENV=production npm run build && node build/index.js"
+    "start:dev": "NODE_ENV=production npm run build && node build/index.js",
+    "start": "NODE_ENV=production node build/index.js"
   },
   "keywords": [],
   "author": "",
